crates/snapshot-tests/tests/snapshots/parser__integer_range_positive.snap
---
source: crates/snapshot-tests/tests/parser.rs
expression: combined
---
error[InvalidInteger]: invalid integer: integer overflow at `a`
  ┌─ integer_range_positive:1:5
  │
1 │ a = 170141183460469231731687303715884105728
  │     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ invalid integer: integer overflow


error: invalid integer: integer overflow at `a`
 --> integer_range_positive:1:5
  |
1 | a = 170141183460469231731687303715884105728
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ invalid integer: integer overflow
Error {
    kind: "InvalidInteger",
    message: "invalid integer: integer overflow",
    span: 4..43,
    path: Some(
        "a",
    ),
}
